# amazing-marvin-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  amazing-marvin-mcp-plan-prompt.md  cosmic-ray-formatting.toml  cosmic-ray.toml  justfile  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-21-amazing-marvin-mcp-design.md  2026-02-21-amazing-marvin-mcp-implementation.md  2026-02-26-block-best-practices.md  2026-03-01-task-attributes-design.md  2026-03-01-task-attributes-impl.md
src/amazing_marvin_mcp/: __init__.py  client.py  formatting.py  marvin.py  prompts.py  server.py
src/amazing_marvin_mcp/prompts/: plan_my_day.md  weekly_review.md
tests/: conftest.py  test_client.py  test_e2e.py  test_formatting.py  test_integration.py  test_marvin.py  test_marvin_integration.py  test_prompts.py  test_server.py  test_unit_marvin.py
